# le_shop

./: .gitignore  LICENSE  README.md  manage.py  package.json  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/apps/accounts/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_alter_user_options_alter_user_table.py
backend/apps/accounts/templates/accounts/: address_confirm_delete.html  address_form.html  addresses_list.html  danger_zone.html  email_change.html  settings.html
backend/apps/accounts/tests/: conftest.py  factories.py  test_models.py  test_views.py
backend/apps/cart/: apps.py  context_processors.py  services.py  views.py
backend/apps/cart/templates/cart/: cart_detail.html  cart_item_detail.html
backend/apps/cart/tests/: test_cart_logic.py  test_cart_views.py
backend/apps/core/: admin.py  allauth_forms.py  apps.py  forms.py  models.py  views.py
backend/apps/core/migrations/: 0001_initial.py  0002_pagesection.py
backend/apps/orders/: admin.py  apps.py  models.py  paypal.py  services.py  signing.py  tracking_services.py  urls.py  views.py
backend/apps/orders/migrations/: 0001_initial.py  0003_ordertracking_ordertrackingevent.py  0004_alter_order_email.py  0005_rename_paypal_capture_id_order_provider_order_id_and_more.py
backend/apps/orders/payments/: base.py  services.py
backend/apps/orders/payments/providers/: paypal.py
backend/apps/orders/templates/orders/: _list_fragment.html  order_confirmation.html  order_confirmation_guest.html  order_list.html
backend/apps/orders/tests/: conftest.py  test_services.py  test_signing.py  test_tracking.py  test_views.py
backend/apps/payments/: apps.py
backend/apps/payments/providers/: paypal.py
backend/apps/products/: admin.py  apps.py  models.py  selectors.py  urls.py  views.py
backend/apps/products/migrations/: 0001_initial.py
backend/apps/products/templates/products/: _grid.html  _list_fragment.html  product_detail.html  product_list.html
backend/apps/products/tests/: test_models.py  test_views.py
backend/config/: __init__.py  settings.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py  settings.py  test.py
backend/static/: site.webmanifest
backend/static/css/: output.css  styles.css
backend/static/js/: cookies.js  hero-carousel.js  scroll-reveal.js
backend/templates/: 400.html  403.html  404.html  500.html  base.html  base_account.html  home.html
backend/templates/account/: account_inactive.html  confirm_login_code.html  email_confirm.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  request_login_code.html  signup.html  verification_sent.html
backend/templates/account/email/: account_already_exists_message.txt  unknown_account_message.txt  unknown_account_subject.txt
backend/templates/cart/: detail.html  product_detail.html
backend/templates/errors/: _base_error.html
backend/templates/includes/: about.html  cookie_consent.html  flash.html  footer.html  header.html  hero.html  mobile_nav.html  search_modal.html
backend/templates/orders/: guest_email.html  guest_success.html  order_track.html  orders_list.html  thank_you.html
backend/templates/pages/: about.html  home.html
backend/templates/partials/: _footer.html  _hero.html  _navbar.html  _navbar_mobile.html  _pagination.html  _search_modal.html
backend/templates/products/: product_detail.html  product_list.html
backend/tests/: conftest.py
backend/tests/e2e/: test_auth_flow.py  test_shop_checkout_flows.py  test_shop_flows.py  test_ui_a11y_design.py  utils.py
docs/: TODAY.MD
frontend/src/: app.css
scripts/: run.sh
src/apps/cart/: cart.py  urls.py  views.py
src/apps/core/: apps.py  context_processors.py  models.py  views.py
src/apps/orders/: admin.py  apps.py  models.py  services.py  views.py
src/apps/orders/migrations/: 0002_remove_order_stripe_payment_intent_and_more.py
src/apps/products/: apps.py  views.py
src/apps/products/migrations/: 0002_product_image_alt.py
src/le_shop/: asgi.py  urls.py  wsgi.py
src/le_shop/settings/: __init__.py  cloudinary.py
src/static/css/: output.css
src/static/js/: hero-carousel.js
src/templates/account/: account_inactive.html  login.html  password_reset.html  signup.html
src/templates/cart/: detail.html
src/templates/includes/: about.html  hero.html
src/templates/orders/: guest_success.html  order_track.html
src/templates/products/: product_detail.html  product_list.html
tests/unit/cart/: test_cart_logic.py  test_cart_views.py
tests/unit/orders/: conftest.py  test_services.py  test_signing.py  test_tracking.py  test_views.py
tests/unit/products/: test_models.py  test_views.py
