[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "le-shop"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "python-decouple",
    "djangorestframework",    
    "django-filter",
    "django-allauth[mfa]",
    "dj-database-url",
    "django-csp",    
    "django-htmx",
    "cloudinary",
    "django-cloudinary-storage",
    "psycopg",
    "gunicorn",
    "django-unfold",
    "PyJWT>=2.8",
    "whitenoise",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "django-stubs",
    "djangorestframework-stubs",
    "types-requests",
    "pytest",
    "pytest-django",
    "pytest-cov",
    "factory-boy",
    "pytest-playwright",
]

[tool.ruff]
exclude = [".git", ".venv", "migrations", "node_modules", "backend/static"]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "backend.config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.config.settings"
pythonpath = [".", "backend"]
python_files = ["tests.py", "test_*.py", "*_test.py", "*_tests.py"]
testpaths = ["backend"]
norecursedirs = ["node_modules", ".venv", "venv", "staticfiles"]
markers = [
  "e2e: End-to-end browser tests",
]
addopts = """
  -ra
  --nomigrations
  --reuse-db
  --cov=backend
  --cov-report=term-missing:skip-covered
  --cov-report=html
  --cov-branch
"""

[tool.coverage.run]
branch = true
source = ["backend"]
omit = [
  "*/migrations/*",
  "*/tests/*",
  "backend/config/asgi.py",
  "backend/config/wsgi.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]